@@ -1,4 +1,4 @@
-CHANGES.txt - 2.0.3 - 2015-03-30
+CHANGES.txt - 2.0.3 - 2015-05-05
 --------------------------------
 
 CHANGES IN CUPS V2.0.3
@@ -8,6 +8,7 @@ CHANGES IN CUPS V2.0.3
 	- Fixed potential buffer overflows in raster code and filters
 	  (STR #4598, STR #4599, STR #4600, STR #4601)
 	- Fixed a gzip processing bug (#4602)
+	- Fixed <Limit> inside <Location> (STR #4575)
 	- Added Russian translation (STR #4577)
 
 
